Adding home image

--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
 <p>Cool and amazing website</p>
 <button onclick="showTime()">Show Time</button>
 
+<br/>
+<img src="assets/images/gamesWebsite.png">
+
+
+
+
 </body>
 </html>
