--- a/about.html
+++ b/about.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Games Website</title>
-    <script src="main.js"></script>
-
+    <title>About</title>
+ <script src="main.js"></script>
 </head>
-
 <body>
+
     <nav>
         <a href="index.html">Home</a>
         <span> | </span>
@@ -20,19 +18,7 @@
         <a href="about.html">About</a>
     </nav>
 
-
-    <h1>Games</h1>
-
-    <p>Cool and amazing website</p>
-
-    <button onclick="showTime()">Show Time</button>
-
-    <br />
-    <img src="assets/images/gamesWebsite.png">
-
-
-
-
+    <p>about page...</p>
+    
 </body>
-
 </html>
