--- a/games.html
+++ b/games.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Games Website</title>
+    <title>Games</title>
     <script src="main.js"></script>
-
 </head>
 
 <body>
@@ -21,18 +20,7 @@
     </nav>
 
 
-    <h1>Games</h1>
-
-    <p>Cool and amazing website</p>
-
-    <button onclick="showTime()">Show Time</button>
-
-    <br />
-    <img src="assets/images/gamesWebsite.png">
-
-
-
-
+    <p>Games page...</p>
 </body>
 
 </html>
